src/objects/sfsp__SalesMetric__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlanMetric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan Metric</label>
        <referenceTo>sfsp__SalesMetric__c</referenceTo>
        <relationshipLabel>Sales Scenario Metrics</relationshipLabel>
        <relationshipName>SalesScenarioMetrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>Sales Metrics</relationshipLabel>
        <relationshipName>SalesMetrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__TargetOverrideEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow users to set their own, modified target</description>
        <label>OverrideTarget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfsp__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Numeric</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Metric</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>